objects/CMPL123__AuditTrail_Config__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123__AuditTrail_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>AuditTrail External Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Child_Relationships_Object__c</fullName>
        <label>Child Relationships Object</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Fields__c</fullName>
        <description>Selected fields separated by Comma / JSON or XML String</description>
        <inlineHelpText>Specify Fields separated by Comma</inlineHelpText>
        <label>Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>uncheck for deactivate</description>
        <inlineHelpText>Uncheck for deactivate</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__Parent_Relationship_Object__c</fullName>
        <label>Parent Relationship Object</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <description>Audit Trail Config</description>
    <label>Audit Trail Config</label>
    <nameField>
        <label>Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit Trail Config</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>